# varManager

./: .gitattributes  .gitignore  .gitmodules  PROJECT_STRUCTURE.md  README.md  README_CN.md  arch.md  arch_flutter.md  build.ps1  varManager.sln
.github/workflows/: build.yml  dotnet-desktop.yml
Custom/Scripts/: README.md
Properties/PublishProfiles/: FolderProfile.pubxml
_archived/: README.md  cleanup_deadlock.bat
_archived/varManager/: App.config  Form1.Designer.cs  FormMissingVars.Designer.cs  FormScenes.Designer.cs  FormScenes.cs  (+7 more)
doc/: arch.md  arch_flutter.md  arch_flutter_cn.md  hub_imporve.md  image_cache.md  problem.md
varManager/: App.config  Form1.Designer.cs  Form1.cs  Form1.resx  FormAnalysis.Designer.cs  FormAnalysis.cs  FormHub.Designer.cs  FormHub.cs  FormMissingVars.Designer.cs  FormMissingVars.cs  FormMissingVars.resx  FormScenes.cs  FormScenes.resx  FormSettings.Designer.cs  FormSettings.cs  FormSwitchAdd.Designer.cs  FormUninstallVars.Designer.cs  FormUninstallVars.cs  FormVarDetail.Designer.cs  FormVarDetail.cs  HubItem.cs  PrepareSaves.Designer.cs  Program.cs  varManager.csproj
varManager_backend/: .gitignore  Cargo.toml
varManager_backend/src/: db.rs  deps_jobs.rs  fs_util.rs  hub.rs  job_channel.rs  links.rs  main.rs  missing_deps.rs  packswitch.rs  paths.rs  preview_jobs.rs  scenes.rs  stale_jobs.rs  system_jobs.rs  system_ops.rs  update_db.rs  var_logic.rs  vars_jobs.rs  vars_misc.rs  winfs.rs
varManager_backend/src/api/: mod.rs
varManager_backend/src/app/: mod.rs
varManager_backend/src/domain/: mod.rs  var_logic.rs
varManager_backend/src/infra/: db.rs  download_manager.rs  downloader.rs  external_links.rs  fs_util.rs  mod.rs  paths.rs  system_ops.rs  torrent_tracker.rs  winfs.rs
varManager_backend/src/jobs/: deps_jobs.rs  hub.rs  job_channel.rs  links.rs  missing_deps.rs  mod.rs  packswitch.rs  preview_jobs.rs  stale_jobs.rs  system_jobs.rs  torrents.rs  update_db.rs  vars_jobs.rs  vars_misc.rs
varManager_backend/src/scenes/: core.rs  jobs.rs  mod.rs
varManager_backend/src/services/: image_cache.rs
varManager_backend/src/util/: mod.rs
varManager_backend/tests/: torrent_scan.rs
varmanager_flutter/: README.md  pubspec.yaml
(+84 files in other folders)
