[package]
name = "varManager_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rusqlite = { version = "0.38", features = ["bundled"] }
regex = "1"
zip = "7"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }
sysinfo = "0.36"
uuid = { version = "1", features = ["v4"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_IO",
] }
