[package]
name = "varManager_backend"
version = "2.0.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
regex = "1"
zip = "7"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }
sysinfo = "0.37"
moka = { version = "0.12", features = ["future"] }
bytes = "1"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
thiserror = "2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_IO",
] }
http-downloader = { version = "0.3", features = ["status-tracker", "speed-limiter", "speed-tracker", "breakpoint-resume", "tracing", "bson-file-archiver"] }
percent-encoding = "2"
url = "2"
scraper = "0.25"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = true
debug = 1
overflow-checks = false
debug-assertions = false
